cli/tests/testdata/npm/node_modules_import/main_check.out
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const value1: string = myImport1.getValue();
      ~~~~~~
    at file:///[WILDCARD]/npm/node_modules_import/main.ts:8:7

TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const value2: string = myImport2.getValue();
      ~~~~~~
    at file:///[WILDCARD]/npm/node_modules_import/main.ts:9:7

Found 2 errors.
